Fixed navigation header flicker

--- a/src/layouts/css/index.css
+++ b/src/layouts/css/index.css
@@ -187,9 +187,7 @@ p {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  /* height: 80vh; */
   margin-top: 0px;
-  /* padding-top: 20px; */
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -253,9 +251,15 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
     overflow: auto;
+}
+
+.step-wrap {
+    padding-left: 10px;
+    width: 100%;
 }
 
 .step-title {
@@ -265,10 +269,6 @@ p {
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
-}
-
-.w-nav-container {
-    height: 75px;
 }
 
 /* Media queries for index page */
@@ -289,6 +289,7 @@ p {
     .step-img {
         width: 80%;
     }
+
 }
 
 @media (max-width: 600px) {
@@ -338,6 +339,8 @@ p {
         margin-top: 10px;
         margin-left: 0px;
     }
+
+
 }
 
 /* /\* Large desktop *\/ */
